syntax = "proto3";
option java_multiple_files = true;
package com.valdemar.grpctest;

message TripDetailsRequest {
    int32 tripId = 1;
}

message TripDetailsResponse {
    int32 tripId = 1;
    string from = 2;
    string to = 3;
    string date = 4;
    int32 days = 5;
}

service TripDetailsService {
    rpc tripDetails(TripDetailsRequest) returns (TripDetailsResponse);
}